# NetWorkStudy

./: .gitignore  CMakeLists.txt  aa.cpp  packetAnalyze.c
Packet/: CMakeLists.txt
Packet/src/: main.c
Packet/src/BIT/: BitFunction.c  BitFunction.h
Packet/src/PACKET/: EHEther.c  IPv4.c  TCP.c  TCP.h  UDP.c  UDP.h
Packet/src/PCAP/: pcapReader.h
data/: udp.pcap  udp.pcapng
src/: main.c
src/BIT/: BitFunction.c  BitFunction.h  DefType.h
src/PACKET/: EHEther.h  IPv4.c  IPv4.h
src/PCAP/: pcapReader.c
